node tutorial complete

--- a/1-node-tutorial/package.json
+++ b/1-node-tutorial/package.json
@@ -4,8 +4,11 @@
   "description": "node - express tutorials",
   "main": "1-intro.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "author": "Saschenka",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.19"
+  }
 }
